--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@angular/cdk": "^7.0.3",
     "@angular/common": "^7.0.3",
     "@angular/compiler": "^7.0.3",
+    "@angular/cli": "^7.0.3",
     "@angular/core": "^7.0.3",
     "@angular/forms": "^7.0.3",
     "@angular/http": "^7.0.3",
@@ -54,11 +55,13 @@
     "classlist.js": "1.1.20150312",
     "core-js": "2.5.1",
     "eva-icons": "^1.1.0",
+    "express": "^4.16.4",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
     "nebular-icons": "1.1.0",
     "normalize.css": "6.0.0",
     "pace-js": "1.0.2",
+    "path": "^0.12.7",
     "roboto-fontface": "0.8.0",
     "rxjs": "6.3.0",
     "rxjs-compat": "6.3.0",
