--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@agm/core": "^1.0.0-beta.5",
+    "@angular-devkit/build-angular": "0.10.2",
     "@angular/animations": "^7.0.3",
     "@angular/cdk": "^7.0.3",
     "@angular/common": "^7.0.3",
@@ -71,6 +72,7 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "0.10.2",
     "@angular/compiler-cli": "^7.0.3",
     "@angular/cli": "^7.0.3",
     "@angular/language-service": "7.0.0",
