--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
   },
   "dependencies": {
     "@agm/core": "^1.0.0-beta.5",
-    "@angular-devkit/build-angular": "0.10.2",
     "@angular/animations": "^7.0.3",
     "@angular/cdk": "^7.0.3",
     "@angular/common": "^7.0.3",
@@ -72,9 +71,9 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.10.2",
-    "@angular/compiler-cli": "^7.0.3",
+    "@angular-devkit/build-angular": "^0.10.7",
     "@angular/cli": "^7.0.3",
+    "@angular/compiler-cli": "^7.0.3",
     "@angular/language-service": "7.0.0",
     "@compodoc/compodoc": "1.0.1",
     "@types/jasmine": "2.5.54",
