--- a/package.json
+++ b/package.json
@@ -15,24 +15,13 @@
     "IE 11"
   ],
   "scripts": {
-    "ng": "ng",
-    "conventional-changelog": "conventional-changelog",
-    "start": "ng serve",
-    "build": "ng build",
-    "build:prod": "npm run build -- --prod --aot",
+    "start": "http-server",
+    "lint": "tslint \"src/**/*.ts\"",
     "test": "ng test",
-    "test:coverage": "rimraf coverage && npm run test -- --code-coverage",
-    "lint": "ng lint",
-    "lint:fix": "ng lint ngx-admin-demo --fix",
-    "lint:styles": "stylelint ./src/**/*.scss",
-    "lint:ci": "npm run lint && npm run lint:styles",
-    "pree2e": "webdriver-manager update --standalone false --gecko false",
-    "e2e": "ng e2e",
-    "docs": "compodoc -p src/tsconfig.app.json -d docs",
-    "docs:serve": "compodoc -p src/tsconfig.app.json -d docs -s",
-    "prepush": "npm run lint:ci",
-    "release:changelog": "npm run conventional-changelog -- -p angular -i CHANGELOG.md -s",
-    "postinstall": "ng build --aot --prod"
+    "pree2e": "webdriver-manager update",
+    "e2e": "protractor",
+    "preinstall": "npm install -g http-server",
+    "postinstall": "ng build && mv dist/* ."
   },
   "dependencies": {
     "@agm/core": "^1.0.0-beta.5",
