--- a/package.json
+++ b/package.json
@@ -15,21 +15,34 @@
     "IE 11"
   ],
   "scripts": {
-    "start": "http-server",
-    "lint": "tslint \"src/**/*.ts\"",
+    "ng": "ng",
+    "conventional-changelog": "conventional-changelog",
+    "start": "node server.ts",
+    "build": "ng build",
+    "build:prod": "npm run build -- --prod --aot",
     "test": "ng test",
-    "pree2e": "webdriver-manager update",
-    "e2e": "protractor",
-    "preinstall": "npm install -g http-server",
-    "postinstall": "ng build && mv dist/* ."
+    "test:coverage": "rimraf coverage && npm run test -- --code-coverage",
+    "lint": "ng lint",
+    "lint:fix": "ng lint ngx-admin-demo --fix",
+    "lint:styles": "stylelint ./src/**/*.scss",
+    "lint:ci": "npm run lint && npm run lint:styles",
+    "pree2e": "webdriver-manager update --standalone false --gecko false",
+    "e2e": "ng e2e",
+    "docs": "compodoc -p src/tsconfig.app.json -d docs",
+    "docs:serve": "compodoc -p src/tsconfig.app.json -d docs -s",
+    "prepush": "npm run lint:ci",
+    "release:changelog": "npm run conventional-changelog -- -p angular -i CHANGELOG.md -s",
+    "postinstall": "ng build --aot --prod"
   },
   "dependencies": {
+    "@angular-devkit/build-angular": "0.10.2",
+    "@angular/compiler-cli": "^7.0.3",
+    "@angular/cli": "^7.0.3",
     "@agm/core": "^1.0.0-beta.5",
     "@angular/animations": "^7.0.3",
     "@angular/cdk": "^7.0.3",
     "@angular/common": "^7.0.3",
     "@angular/compiler": "^7.0.3",
-    "@angular/cli": "^7.0.3",
     "@angular/core": "^7.0.3",
     "@angular/forms": "^7.0.3",
     "@angular/http": "^7.0.3",
@@ -61,7 +74,7 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.10.7",
+    "@angular-devkit/build-angular": "0.10.2",
     "@angular/cli": "^7.0.3",
     "@angular/compiler-cli": "^7.0.3",
     "@angular/language-service": "7.0.0",
@@ -71,6 +84,7 @@
     "@types/node": "6.0.90",
     "codelyzer": "3.2.1",
     "conventional-changelog-cli": "1.3.4",
+    "enhanced-resolve": "^3.3.0",
     "husky": "0.13.3",
     "jasmine-core": "2.6.4",
     "jasmine-spec-reporter": "4.1.1",
