--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "ng": "ng",
     "conventional-changelog": "conventional-changelog",
-    "start": "node server.ts",
+    "start": "node server.js",
     "build": "ng build",
     "build:prod": "npm run build -- --prod --aot",
     "test": "ng test",
@@ -35,13 +35,13 @@
     "postinstall": "ng build --aot --prod"
   },
   "dependencies": {
-    "@angular/compiler-cli": "^7.0.3",
-    "@angular/cli": "^7.0.3",
     "@agm/core": "^1.0.0-beta.5",
     "@angular/animations": "^7.0.3",
     "@angular/cdk": "^7.0.3",
+    "@angular/cli": "^7.0.3",
     "@angular/common": "^7.0.3",
     "@angular/compiler": "^7.0.3",
+    "@angular/compiler-cli": "^7.0.3",
     "@angular/core": "^7.0.3",
     "@angular/forms": "^7.0.3",
     "@angular/http": "^7.0.3",
@@ -101,5 +101,9 @@
     "tslint": "5.7.0",
     "tslint-language-service": "^0.9.9",
     "typescript": "3.1.3"
+  },
+  "engines": {
+    "node": "6.11.0",
+    "npm": "3.10.10"
   }
 }
