--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
     "typescript": "3.1.3"
   },
   "engines": {
-    "node": "6.11.0",
-    "npm": "3.10.10"
+    "node": "^10.0.0",
+    "npm": "4.0.00"
   }
 }
