--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "ng": "ng",
     "conventional-changelog": "conventional-changelog",
-    "start": "node server.js",
+    "start": "node server.ts",
     "build": "ng build",
     "build:prod": "npm run build -- --prod --aot",
     "test": "ng test",
@@ -35,6 +35,7 @@
     "postinstall": "ng build --aot --prod"
   },
   "dependencies": {
+    "@angular-devkit/build-angular": "0.10.2",
     "@agm/core": "^1.0.0-beta.5",
     "@angular/animations": "^7.0.3",
     "@angular/cdk": "^7.0.3",
