--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "~0.11.0",
     "@angular/cli": "^7.1.1",
     "@angular/compiler-cli": "^7.1.1",
     "@angular/animations": "~7.1.0",
