--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "~0.11.0",
     "@angular/cli": "^7.1.1",
     "@angular/compiler-cli": "^7.1.1",
     "@angular/animations": "~7.1.0",
