--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@angular/cli": "~7.1.1",
     "@angular/compiler-cli": "~7.1.0",
+    "@angular-devkit/build-angular": "~0.11.0",
     "@angular/animations": "~7.1.0",
     "@angular/common": "~7.1.0",
     "@angular/compiler": "~7.1.0",
