--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "ecfj",
   "version": "0.0.0",
   "scripts": {
+    "heroku-prebuild": "npm install -g http-server",
+    "heroku-postbuild": "ng build --prod",
+    "start": "http-server dist/",
     "ng": "ng",
-    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -25,7 +27,10 @@
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.26",
+    "@types/node": "~8.9.4",
+    "@types/jasmine": "~2.8.8",
+    "typescript": "~3.1.6"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.11.0",
